# rules_nodejs_duplicate_module_mapping

./: README.md  WORKSPACE.bazel  package-lock.json  package.json
a/: BUILD.bazel  package-lock.json  package.json
b/: BUILD.bazel  package-lock.json  package.json
